syntax = "proto3";

package <%= packageName %>;

option java_multiple_files = true;
option java_package = "<%= packageName %>";
option java_outer_classname = "ServiceProto";

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}